fixed bad valueOf